fixed image size for paycrave on mobile and prototype responsiveness on mobile

--- a/css/paycrave.css
+++ b/css/paycrave.css
@@ -234,12 +234,26 @@ grid-column: 1/-1;
   visibility: hidden;
 }
 
+.small-image {
+  display: none;
+}
+
 @media (max-width: 700px) {
 
+  .big-image {
+    display: none;
+  }
+  .small-image {
+    display: block;
+  }
+
+  .prototype {
+    display: none;
+  }
 figure {
   padding: 0px;
   margin: 0px;
-  
+
 }
   .banner-text {
     /*font-size: 30px;
